# base

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  MyAlgorithm_colorfilter.py  MyAlgorithm_followturtlebot.py  MyAlgorithm_positioncontrol.py  README  README.md  TODO  acinclude.m4  buildpresets.cmake  clean_repository  configure.in  jdec.pc  jderobot.cfg  output.txt  setup.bash.in
assets/gazebo/: CMakeLists.txt  gazebo-assets-setup.sh.in
assets/gazebo/launch/: example_drone.launch  f1-chrono.launch  f1-obstacles.launch  follow_road.launch  taxi-holo-laser.launch  turtlebot-xtion-followline.launch
assets/gazebo/worlds/: AprilTagsFlat.world  Asymmetric-Easy-To-Model.world  amazon-warehouse.world  ardrone-trees-simple_3.world  autopark.world  example_drone.world  f1-simple-circuit.world  f1-simpleCircuitObstacles.world  gymkhana-simple.world  gymkhana.world  junction.world  landing.world  monacoLineROS.world  montmelo-pioneer.world  nurburgrinLineROS.world  outdoor.world  pibot-room.world  pibot-siguelineaUS.world  rdrone-trees-simple_2.world  reconstruccion3D.world  road_drone_textures.world  road_drone_textures_ROS.world  sigue_pelota_picam.world  turtlebot-xtion-followline.material  turtlebot-xtion-followline.world
base/: Makefile  Makefile.am  hierarchy.c  hierarchy.h  interface.c  interface.h  jde.c  jde.conf  jde.h  jde_private.h  jderobot.c  jderobot.conf.in  jdeshell.c  jdeshell4.4.c  loader.c  loader.h  schema.c  schema.h
base/swig/: Makefile.am  hierarchy.i  interface.i  jde.i  jdetypes.i  pyschema.py  sA.py  sB.py  schema.i  schema.py
components/varcolorserver/: Makefile.am  gstpipeline.cpp  varcolorserver.cfg  varcolorserver.cpp
components/varcolorviewgtkmm/: Makefile.am  varcolorviewgtkmm.cpp  viewer.cpp  viewer.h
docs/: Makefile.am  jdec.doxygen
docs/howto-gazebo/: Makefile  howto-gazebo.tex
docs/howto-ipp/: Makefile  howto-ipp.tex
docs/manual/: Makefile  aplicacion.tex  drivers.tex  esquemas.tex  gui.tex  html.sty  introduccion.tex  jdecmanual.bib  jdecmanual.tex
docs/manual/figs/: appjerarquia.eps  appunesquema.eps  appunesquema.fig  appunnivel.eps  appunnivel.fig  arquitectura.fig  coordinatespt.eps  coordinatespt.fig  energia.sonar.fig  jdebasico.eps  jdebasico.fig  modelosonar.fig  pioneer-struct.fig  programacion2.eps  programacion2.fig  programacion3.eps  programacion3.fig  record.fig  replay.fig  sonarnumbers.fig  srefrobot.fig  variable_laser.eps  variable_laser.fig  variable_odometria.eps  variable_odometria.fig  variable_us.eps  variable_us.fig
docs/progeo-manual/: Makefile  progeo-manual.tex
drivers/evi/: Makefile  Makefile.am  camera.cpp  camera.h  evi.c  evi.conf  evi.cpp  evi.h
drivers/evi/EVILib/: EVI-D100.c++  EVI-D100.h  EVI-D100g.h  EVI-D30g.h  EVI-D31.c++  EVI-D31.h  EVILib.c++  Makefile  makeinclude
drivers/firewire/: Makefile  Makefile.am  firewire.c  firewire.conf
drivers/gazebo/: Makefile  Makefile.am  gazebo.c  gazebo.conf
drivers/imagefile/: Makefile  Makefile.am  atardecer.ppm  casaleft.pnm  casaright.pnm  imagefile.c  imagefile.conf
drivers/mplayer/: Makefile  Makefile.am  mplayer.c  mplayer.conf
drivers/networkclient/: Makefile  Makefile.am  jdemessages.h  makefile  networkclient.c  networkclient.conf
drivers/opencv/: Makefile.am  opencv.c  opencv.conf
drivers/pantilt/: Makefile  Makefile.am  pantilt.c  pantilt.conf
drivers/simulated3D/: Makefile.am  cameraAfile  cameraBfile  cameraCfile  cameraDfile  robotics-lab  simulated3D.c  simulated3D.conf
drivers/video4linux/: Makefile  Makefile.am  video4linux.c  video4linux.conf
drivers/video4linux2/: Makefile.am  video4linux2.c  video4linux2.conf
drivers/wiimote/: Makefile  Makefile.am  wiimote.c  wiimote.conf  wiimote.h
drivers/x10/: Makefile  Makefile.am  x10.c  x10.conf  x10.h
examples/: Makefile.am  randomwalk.c  randomwalk.conf.in  randomwalk.py
examples/base/: jdec.c  sA.c  schema.h
examples/esquema_prueba/: Makefile  esquema_prueba.c  esquema_prueba.glade  esquema_prueba.h
examples/fuzzylib/: Makefile
examples/ice/example3/: viewer.cpp  viewer.h
examples/ice/example4/: Makefile  varcolorserver.cfg
examples/ice/example5/: gstpipeline.cpp  viewer.cpp
examples/jde-ice/: schema.ice
examples/jde-swig/: Makefile  jdec.py  random_iface.i
examples/myschema/: Makefile  myschema.c  myschema.h
examples/opengl_viewer/: Makefile  opengl_viewer.c  opengl_viewer.glade  opengl_viewer.h
examples/papito/: Makefile  papito.c  papito.h
interfaces/: Makefile.am  encoders.c  encoders.h  interface.c  interface.h  laser.c  laser.h  motors.c  motors.h  varcolor.c  varcolor.h  x10.h
interfaces/slice/jderobot/: containers.ice  datetime.ice  exceptions.ice  varcolor.ice
interfaces/swig/: Makefile.am  encoders.i  interface.i  laser.i  motors.i
schemas/calibrador/: Makefile  Makefile.am  TAD.h  calibrador.c  calibrador.h  calibradorgui.fd  clasificator.c  clasificator.h  segment.c  segment.h
schemas/colortuner/: Makefile.am  README  colortuner.c  colortuner.glade  colortuner.h
schemas/domoticdemo/: Makefile.am  domoticdemo.c  domoticdemo.glade  domoticdemo.h
schemas/esquema_prueba/: Makefile.am  esquema_prueba.c  esquema_prueba.h
schemas/extrinsics/: Makefile.am  cam-in  extrinsics.c  extrinsics.h  extrinsicsgui.fd  inteco-room  robotics-lab
src/: CMakeLists.txt  Makefile.am  cameraproxy.cc  quadrotorcontrol.cc  quadrotorcontrol_hector.cc  quadrotorice.cc  quadrotorplugin.cc  quadrotorsensors.cc
src/components/: CMakeLists.txt  Makefile.am
src/components/alarmgenerator/: CMakeLists.txt  Makefile.am  alarmgenerator.cfg  alarmgenerator.cpp
src/components/android-teleoperator/: .classpath
src/components/basic_component/: API.cpp  API.h  CMakeLists.txt  (+19 more)
src/drivers/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/interfaces/: CMakeLists.txt  Makefile.am  camerai.cpp  cameraibase.cpp  dronecontroli.cpp  navdatai.cpp  pose3di.cpp  pushcamerai.cpp
src/libs/: CMakeLists.txt  Makefile  Makefile.am  cmake_install.cmake
src/stable/: CMakeLists.txt
src/types/: CMakeLists.txt
(+5015 files in other folders)
